Fixes borders to only include cards vs gutters; separates cards from columns; adjusts spacing numbers to more closely match example.

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
 header {
-  background-color: gold;
+  background-color: #eebb44;
   margin-bottom: 40px;
 }
+header h1 {
+  margin-top: 20px;
+}
 
-.character {
+.character{
+  margin-bottom: 20px;
   border: 1px solid lightgrey;
+}
+.character h3, .character p {
+  padding-left: 10px;
 }
 
 img {
